double/int values for seq read counts changed to long